Fix audit contrast recommendations

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: darkblue;
     text-decoration: none;
 }
 
@@ -227,7 +227,7 @@ nav h1 a {
   padding: 25px 0;
 }
 #restaurant-name {
-  color: #f18200;
+  color: black;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -267,7 +267,7 @@ nav h1 a {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: black;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
